tests/baselines/reference/typeCheckObjectCreationExpressionWithUndefinedCallResolutionData.errors.txt
tests/cases/compiler/file1.ts(3,12): error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.


==== tests/cases/compiler/file2.ts (0 errors) ====
    import f = require('./file1');
    f.foo();
    
==== tests/cases/compiler/file1.ts (1 errors) ====
    export function foo() {
    var classes = undefined;
        return new classes(null);
               ~~~~~~~~~~~~~~~~~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
    }
    